<resources>
    <string name="facebook_app_id" translatable="false">408379096985043</string>
    <string name="facebook_client_token" translatable="false">e43a07afe12ba2a13dd7703c63c16f2d</string>
    <string name="app_name" translatable="false">Body Mass Index Disease Tracker</string>
    <string name="app_name_short" translatable="false">BMI Disease Tracker</string>
    <string name="server_client_id" translatable="false">403561407577-tbsv2nomg2981hd1b7cd2dt7bek43267.apps.googleusercontent.com</string>
    <string name="login_hint_email">Email address</string>
    <string name="login_hint_password">Password</string>
    <string name="login_hint_confirm_password">Confirm password</string>
    <string name="login_hint_passwordCheck">Password must contain:</string>
    <string name="login_hint_passwordCheck_length">at least 8 characters</string>
    <string name="login_hint_passwordCheck_number">\u0020 1 number</string>
    <string name="login_hint_passwordCheck_symbol">\u0020 1 special symbol</string>
    <string name="login_hint_passwordCheck_match">passwords must match</string>
    <string name="profile_hint_name">Name</string>
    <string name="profile_hint_surname">Surname</string>
    <string name="gender_hint_not_say">I will not say</string>
    <string name="button_sign_in">Login</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_sign_up_text">Need an account?</string>
    <string name="button_next">Next</string>
    <string name="button_come_in">Come In</string>
    <string name="button_skip">Skip</string>
    <string name="button_got_it">Got it</string>
    <string name="button_dont_remember_password">Forgot password?</string>
    <string name="button_i_agree">I Agree</string>
    <string name="button_i_disagree">I Disagree</string>
    <string name="button_reset_pass">Reset</string>
    <string name="button_send">Send</string>
    <string name="button_accept">Accept</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_done">Calculate risks</string>
    <string name="button_delete">Delete</string>
    <string name="button_subscribe">Subscribe</string>
    <string name="button_subs_manage">Subscription management</string>
    <string name="button_store">Store</string>
    <string name="main_bottom_menu_home">Home</string>
    <string name="main_bottom_menu_profile">Profile</string>
    <string name="main_bottom_menu_medcard">Medical card</string>
    <string name="main_home_menu_favorite">Favorite</string>
    <string name="main_home_menu_analyze">Analyze</string>
    <string name="main_home_menu_recommendations">Recommendations</string>
    <string name="main_home_menu_report">Report</string>
    <string name="main_app_menu_setting">Setting</string>
    <string name="main_app_menu_subscriptions">Store</string>
    <string name="main_app_menu_log_out">Log out</string>
    <string name="switch_disclaimer">Don`t show again?</string>
    <string name="switch_login_remember_password">Remember</string>
    <string name="switch_sign_in_privacy_agree">I agree on terms and condition</string>
    <string name="main_subs_info">Trial version expires on %1$s</string>
    <string name="main_subs_expire">Trial version expired</string>
    <string name="welcome_1_main_text">Welcome to the first version of our application.\n\nIt is in a test mode, so we kindly ask you to forgive us for possible errors.\n\nPlease help us to improve this application by sending your feedback and any questions related to its use to <b>support@intime.digital</b></string>
    <string name="welcome_1_public_beta" translatable="false">Public beta</string>
    <string name="welcome_1_greeting">Greetings!</string>
    <string name="welcome_1_check_box_text">I want to help make this product better</string>
    <string name="welcome_2_title">collect all data\nin one place</string>
    <string name="welcome_2_main_text">\tThis application is your personal digital bio-bank and health tracker with records storage history.\n\n\tAdd the data to the required fields and connect your fitness application or wearables to synchronize.\n\n\tToday you need to enroll your data manually, but tomorrow we will sync it.\n\n\tPlease keep your data updated.</string>
    <string name="welcome_3_title">risk report and\nrecommendations</string>
    <string name="welcome_3_main_text">\tApplication is designed to monitor in real-time the key parameters of your body to provide information on how they can affect longevity and the possibility of developing serious diseases in the future.\n\n\tOur AI server will calculate your personal risks based on collected data.\n\n\tFor better performance, we strongly recommend measuring yourself constantly even if there weren\'t significant events which influenced on your parameters changes.</string>
    <string name="welcome_4_title">stay tuned</string>
    <string name="welcome_4_main_text">\tThe most important thing is that the longer you measure and store your data, the more accurate the calculation of risks and forecasts will be.\n\n\tWe will increase the number of parameters in the future.\n\n\tTrack Early. Live Longer.</string>
    <string name="welcome_5_title">help us</string>
    <string name="welcome_5_main_text">\tPlease rate us in Google Play page and leave your comments. It will help others to find our app and get health value out of it.\n\n\tAlso, we want you to answer a few questions about our product.\n\n\tIf you can help us, we will send it to your e-mail.</string>
    <string name="welcome_5_question_check_text">Receive a questionnaire</string>
    <string name="welcome_5_update_check_text">Receive our updates and news</string>
    <string name="warning">Warning!</string>
    <string name="please_read_the_following">(Please read the following)</string>
    <string name="our_service_is_not_a_medical_service">Our service is not a medical service.</string>
    <string name="welcome_frag_one_main_text">Our services are second / third opinions\nbased on artificial intelligence algorithms\nand statistics. We provide diagnostics only\nof the likelihood of developing diseases\nbased on data on the health status of\npeople with similar parameters.</string>
    <string name="welcome_frag_two_main_text">Our service is not a substitute for\nprofessional medical care. If you have or\nsuspect that you may have health\nproblems, please consult your doctor.</string>
    <string name="welcome_frag_three_main_text">Consult a specialist for advice. The\ninformation provided in this application is\nfor informational purposes only and should\nnot be used for diagnosis or treatment.</string>
    <string name="disclaimer_title">Disclaimer!</string>
    <string name="welcome_title">Welcome!</string>
    <string name="sign_in_or">---OR---</string>
    <string name="create_an_account">Create an account?</string>
    <string name="policy_title">Accept the privacy policy</string>
    <string name="sign_up_success">To complete the registration you need follow the link sent to you by email.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_pass_text">If you have forgotten your password enter\nyour e-mail address and we send you a\nverification code, then you can reset your\npassword.</string>
    <string name="forgot_pass_title">Reset password</string>
    <string name="forgot_pass_sending_info">To complete the reset your password you need follow the link sent to you by email</string>
    <string name="reset_pass_title">New password</string>
    <string name="reset_pass_text">Enter your new password.</string>
    <string name="reset_pass_success">Password changed successfully!</string>
    <string name="confirm">Confirm</string>
    <string name="new_pass_warning_text">Enter your new passord, please, try to\nuse a numbers and english letters in it,\nyou need to enter from 6 to 10 symbols.</string>
    <string name="recom_title_common">Common recommendations</string>
    <string name="recom_title_personal">Personal recommendations</string>
    <string name="recom_subs_info">Trial version is expired. Please update your subscription.</string>
    <string name="profile_gender_title">Choice gender</string>
    <string name="profile_height_title">Height</string>
    <string name="profile_height_message">Please enter your height</string>
    <string name="profile_smoker_title">Are you a smoker?</string>
    <string name="profile_welcome_dialog_title">Welcome to the our app!</string>
    <string name="profile_welcome_dialog_message">Hello, for the correct operation of our application, please fill in the basic information about yourself.</string>
    <string name="profile_firs_time_msg">Please fill following fields and tap on the next button:\n</string>
    <string name="medcard_card_item_source_type">Source type:</string>
    <string name="medcard_card_item_measur_freq">Measurement frequency:</string>
    <string name="medcard_card_item_last_update">Last update:</string>
    <string name="medcard_dialog_source_type">Please enter source type:</string>
    <string name="medcard_dialog_dot" translatable="false">,</string>
    <string name="medcard_first_dialog_title">Last step!</string>
    <string name="medcard_first_dialog_message">For the application to work correctly, please enter your medical data.</string>
    <string name="setting_delete_dialog_title">Deleting a profile</string>
    <string name="setting_delete_dialog_message">By deleting your profile, you irrevocably lose all data on our website and in the mobile application. The operation is irreversible and you will no longer be able to log into your account.</string>
    <string name="setting_measure_dialog_title">Choice measuring system</string>
    <string name="setting_measure_metric">Metric</string>
    <string name="setting_measure_imperial">Imperial</string>
    <string name="subs_text_cost">Cost:</string>
    <string name="subs_text_activated">Activated</string>
    <string name="medcard_name_weight">Weight</string>
    <string name="medcard_name_hip">Hip</string>
    <string name="medcard_name_waist">Waist</string>
    <string name="medcard_name_wrist">Wrist</string>
    <string name="medcard_name_neck">Neck</string>
    <string name="medcard_name_heart_rate_alone">Current heart rate</string>
    <string name="medcard_name_daily_activity_level">Daily activity level</string>
    <string name="medcard_name_blood_pressure_sys">Blood pressure sys</string>
    <string name="medcard_name_blood_pressure_dia">Blood pressure dia</string>
    <string name="medcard_name_cholesterol">Cholesterol</string>
    <string name="medcard_name_glucose">Glucose</string>
    <string name="medcard_name_daily_minimum">Minimum</string>
    <string name="medcard_name_daily_lower">Lower</string>
    <string name="medcard_name_daily_medium">Medium</string>
    <string name="medcard_name_daily_high">High</string>
    <string name="medcard_name_daily_very_high">Very High</string>
    <string name="medcard_daily_minimum_desc">Passive lifestyle</string>
    <string name="image_description" translatable="false">image</string>
    <string name="text_disclaimer">Our service is not a medical service. Consult a specialist for advice. The information provided in this application is for informational purposes only and should not be used for diagnosis or treatment. Our service is not a substitute for professional medical care. If you have or suspect that you may have health problems, please consult your doctor. Our services are second/third opinion based on artificial intelligence algorithms and statistics. We provide diagnostics only of the likelihood of developing diseases based on data on the health status of people with similar parameters.</string>
</resources>