<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.labelActivity.welcome.WelcomeFragment1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:layout_gravity="center"
        >



        <TextView
            android:id="@+id/welcome1TitleText"
            android:text="@string/warning"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            android:textColor="@color/labelGradientBckSecond"
            android:textSize="24sp"
            android:fontFamily="@font/dmsans_bold"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/welcome1PublicText"
            android:text="@string/please_read_the_following"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/color_black"
            android:fontFamily="@font/dmsans_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome1TitleText"/>

        <TextView
            android:id="@+id/welcome1GreetingText"
            android:text="@string/our_service_is_not_a_medical_service"
            android:layout_width="0dp"
            android:textColor="@color/gray_800"
            android:fontFamily="@font/dmsans_regular"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome1PublicText"/>

        <TextView
            android:id="@+id/welcome1MainText"
            android:layout_marginTop="25dp"
            android:text="@string/welcome_frag_one_main_text"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:autoLink="all"
            android:textSize="16sp"
            android:fontFamily="@font/dmsans_regular"
            android:linksClickable="true"
            android:textColor="@color/color_black"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome1GreetingText"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/welcome1CheckBox"
            android:text="@string/welcome_1_check_box_text"
            android:textColor="@color/color_black"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:checked="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome1MainText"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>