<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.labelActivity.disclaimer.DisclaimerFragment">

    <TextView
        android:id="@+id/disclaimerTextViewTitle"
        android:text="@string/disclaimer_title"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standart_margin_top_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/disclaimerNestedScrollMainText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/standart_margin_top_logo"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/disclaimerTextViewTitle"
        app:layout_constraintBottom_toTopOf="@id/disclaimerSwitch">

        <TextView
            android:id="@+id/disclaimerTextViewMainText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/text_disclaimer"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/disclaimerSwitch"
        android:text="@string/switch_disclaimer"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standart_margin_top_logo"
        app:layout_constraintBottom_toTopOf="@id/disclaimerButtonNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/disclaimerButtonNext"
        android:text="@string/button_next"
        android:layout_width="@dimen/standart_width_field_logo"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@drawable/common_button_selector"
        android:layout_marginBottom="@dimen/standart_margin_top_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>