<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context=".view.loginActivity.forgotPass.ResetPassFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/resetPassGroupPassHint"
        app:constraint_referenced_ids="resetPassTextViewHintTitle, resetPassTextViewHintLength, resetPassTextViewHintNumber, resetPassTextViewHintSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/resetPassTextViewTitle"
        android:text="@string/reset_pass_title"
        android:textSize="22sp"
        android:textColor="@color/color_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dmsans_bold"
        android:layout_marginTop="@dimen/standart_margin_top_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/resetPassTextViewInfoText"
        android:text="@string/new_pass_warning_text"
        android:textColor="@color/gray_800"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="@dimen/standart_margin_top_logo"
        android:gravity="center"
        android:layout_width="0dp"
        android:fontFamily="@font/dmsans_regular"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPassTextViewTitle"/>

    <TextView
        android:id="@+id/resetPassTextViewHintTitle"
        android:text="@string/login_hint_passwordCheck"
        android:textSize="@dimen/standart_min_text_size"
        android:textColor="@color/color_black"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standart_margin_top_logo"
        app:layout_constraintStart_toStartOf="@id/resetPassTextInputLayoutPass"
        app:layout_constraintTop_toBottomOf="@id/resetPassTextViewInfoText"/>

    <TextView
        android:id="@+id/resetPassTextViewHintLength"
        android:text="@string/login_hint_passwordCheck_length"
        android:textSize="@dimen/standart_min_text_size"
        android:textStyle="italic"
        android:textColor="@color/red_900"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/resetPassTextViewHintTitle"
        app:layout_constraintTop_toBottomOf="@id/resetPassTextViewHintTitle"/>

    <TextView
        android:id="@+id/resetPassTextViewHintNumber"
        android:text="@string/login_hint_passwordCheck_number"
        android:textSize="@dimen/standart_min_text_size"
        android:textStyle="italic"
        android:textColor="@color/red_900"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/resetPassTextViewHintLength"
        app:layout_constraintTop_toBottomOf="@id/resetPassTextViewHintTitle"/>

    <TextView
        android:id="@+id/resetPassTextViewHintSymbol"
        android:text="@string/login_hint_passwordCheck_symbol"
        android:textSize="@dimen/standart_min_text_size"
        android:textStyle="italic"
        android:textColor="@color/red_900"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/resetPassTextViewHintNumber"
        app:layout_constraintTop_toBottomOf="@id/resetPassTextViewHintTitle"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/resetPassTextInputLayoutPass"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="@dimen/standart_margin_top_logo"
        android:layout_marginEnd="40dp"
        android:background="@color/transparent"
        app:boxStrokeColor="@color/transparent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/warn"
        app:errorIconTint="@color/gray_800"
        app:passwordToggleDrawable="@drawable/eye"
        app:passwordToggleEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPassTextViewHintSymbol">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/resetPassTextInputEditTextPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/all_round_gray"
            android:focusable="true"
            android:fontFamily="@font/dmsans_regular"
            android:hint="@string/login_hint_password"
            android:inputType="textEmailAddress"
            android:paddingStart="60dp"
            android:textColor="@color/color_black"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
        android:id="@+id/emailicon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/image_description"

        android:background="@drawable/all_round_blue"
        app:layout_constraintBottom_toBottomOf="@+id/resetPassTextInputLayoutPass"
        app:layout_constraintStart_toStartOf="@+id/resetPassTextInputLayoutPass"
        app:layout_constraintTop_toTopOf="@+id/resetPassTextInputLayoutPass" />
     <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/key"
         android:contentDescription="@string/image_description"

         app:layout_constraintBottom_toBottomOf="@+id/emailicon"
        app:layout_constraintEnd_toEndOf="@+id/emailicon"
        app:layout_constraintStart_toStartOf="@+id/emailicon"
        app:layout_constraintTop_toTopOf="@+id/emailicon" />

    <ProgressBar
        android:id="@+id/resetPassProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:visibility="gone"
        android:layout_width="@dimen/standart_width_field_logo"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standart_margin_top_logo"
        android:indeterminate="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPassTextInputLayoutPass"/>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_description"

        android:background="@drawable/downorit"
        app:layout_constraintBottom_toBottomOf="parent" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetPassButtonReset"
        android:text="@string/confirm"
        android:enabled="false"
        android:background="@drawable/all_round_white"
        android:textColor="@color/color_black"
        android:layout_width="150dp"
        android:textSize="18sp"
        android:fontFamily="@font/dmsans_medium"
        android:textAllCaps="false"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"/>

</androidx.constraintlayout.widget.ConstraintLayout>